--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     </link>
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="icon" href="./assets/images/favicon.png" type="image/png" sizes="16x16">
     <title>Crystal Collector</title>
 </head>
 
@@ -22,28 +25,50 @@
             </div>
         </div>
 
-        <div class="row targetNumber">
+        <div class="row numberToMatch">
             <div class="col-lg-12 pb-5 d-flex justify-content-center">
-                <h3>Number of crystals to collect: <span id="crystals-to-collect"></span></h3>
+                <h2>Collect <span id="randomNumber"></span> crystals to win!</h2>
             </div>
         </div>
 
         <!--Crystals-->
-        <div class="row d-flex justify-content-around">
-            <div id="crystals"></div>
+        <div class="row d-flex justify-content-center">
+            <div id="crystals">
+                <img src="./assets/images/blue.png" class=crystalPic id="one" alt="Blue Gem">
+                <img src="./assets/images/green.png" class=crystalPic id="two" alt="Green Gem">
+                <img src="./assets/images/orange.png" class=crystalPic id="three" alt="Orange Gem">
+                <img src="./assets/images/pink.png" class=crystalPic id="four" alt="Pink Gem">
+            </div>
         </div>
-    </div>
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <!--jQuery library -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- jsDelivr -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <!--bootstrap javascript-->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <!-- javascript game.js-->
-    <script type="text/javascript" src="./assets/javascript/game.js"></script>
+        <div class="row d-flex justify-content-center">
+            <h3 class="userTotal mt-5">
+                <p>So far you have collected <span id="finalTotal"></span> crystals!</p>
+            </h3>
+        </div>
+
+        <div class="row d-flex justify-content-around">
+            <div class="winsAndLosses">
+                <h4>Wins:
+                    <span id="numberWins"></span>
+                    <span id="placeholder">............</span>
+                    Losses:
+                    <span id="numberLosses"></span>
+                </h4>
+            </div>
+        </div>
+
+
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+        <!--jQuery library -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- jsDelivr -->
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+        <!--bootstrap javascript-->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <!-- javascript game.js-->
+        <script type="text/javascript" src="./assets/javascript/game.js"></script>
 
 </body>
 
