--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container pb-5">
         <div class="row header">
             <div class="col-lg-12 py-5 d-flex justify-content-center">
                 <h1>Crystal Collector</h1>
@@ -57,18 +57,26 @@
                 </h4>
             </div>
         </div>
+    </div>
 
+    <div class="container-fluid mt-5 colorStrip">
+        <div class="row colorStripText pt-3 d-flex justify-content-around text-uppercase">
+            <h5>
+                <span id="results"></span>
+            </h5>
+        </div>
+    </div>
 
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-        <!--jQuery library -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!-- jsDelivr -->
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <!--bootstrap javascript-->
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <!-- javascript game.js-->
-        <script type="text/javascript" src="./assets/javascript/game.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <!--jQuery library -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- jsDelivr -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <!--bootstrap javascript-->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <!-- javascript game.js-->
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
 
 </body>
 
