--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     </link>
+
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     </link>
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="icon" href="./assets/images/favicon.png" type="image/png" sizes="16x16">
+
+    <!-- Sound Effects -->
+    <audio src="./assets/sound/crystalClick.wav" id="click" crossOrigin="anonymous"></audio>
+    <audio src="./assets/sound/won.wav" id="won" crossOrigin="anonymous"></audio>
+    <audio src="./assets/sound/lost.wav" id="lost" crossOrigin="anonymous"></audio>
+
     <title>Crystal Collector</title>
 </head>
 
