fixed sound effects on win and lose

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <!-- Sound Effects -->
     <audio src="./assets/sound/crystalClick.wav" id="click" crossOrigin="anonymous"></audio>
-    <audio src="./assets/sound/won.wav" id="won" crossOrigin="anonymous"></audio>
-    <audio src="./assets/sound/lost.wav" id="lost" crossOrigin="anonymous"></audio>
+    <audio src="./assets/sound/won.wav" id="yay" crossOrigin="anonymous"></audio>
+    <audio src="./assets/sound/lost.wav" id="boo" crossOrigin="anonymous"></audio>
 
     <title>Crystal Collector</title>
 </head>
