--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-    <div class="container pb-5">
+    <div class="container-fluid pb-5">
         <div class="row header">
             <div class="col-lg-12 py-5 d-flex justify-content-center">
                 <h1>Crystal Collector</h1>
@@ -40,7 +40,7 @@
         </div>
 
         <!--Crystals-->
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center mx-auto">
             <div id="crystals">
                 <img src="./assets/images/blue.png" class=crystalPic id="one" alt="Blue Gem">
                 <img src="./assets/images/green.png" class=crystalPic id="two" alt="Green Gem">
@@ -49,10 +49,9 @@
             </div>
         </div>
 
-        <div class="row d-flex justify-content-center">
-            <h3 class="userTotal mt-5">
-                <p>So far you have collected <span id="finalTotal"></span> crystals!</p>
-            </h3>
+        <div class="row mx-auto d-flex justify-content-center">
+            <So class="userTotal mt-5">So far you have collected <span id="finalTotal"></span> crystals!
+                </h3>
         </div>
 
         <div class="row d-flex justify-content-around">
